[tool.poetry]
name = "coco"
version = "0.1.0"
description = "coco data aalysis"
authors = ["Thomas Marquis <thomas.marquis.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
requests = "^2.23.0"
pymongo = "^3.10.1"
matplotlib = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
